english version update

--- a/en.html
+++ b/en.html
@@ -57,13 +57,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="f--font-a text-center f--mb-32">AT ULMA WE KNOW WHAT TO DO <br><span class="f--color-b f--bold">SO YOU DON’T HAVE TO STOP</span></h1>
+                        <h1 class="f--font-a text-center f--mb-32">AT ULMA WE KNOW WHAT TO DO<br><span class="f--color-b f--bold">SO YOU DON’T HAVE TO STOP</span></h1>
                         
                     </div>
                     <div class="col-lg-8 offset-lg-2  col-12 offset-0 text-center">
                         <p class="f--font-e f--bold">We look around and everything we see reminds us that the world doesn’t stop. Our challenge is that you don’t stop either.</p> <br>
-                        <p class="f--font-e">We’re constantly put to the test by the market where we have to meet shorter and shorter deadlines faster and more effectively. Our choice is to not get left behind, keep up the pace, not lose control and always keep moving forward. </p> <br>
-                        <p class="f--font-e"><span class="f--color-b">With ULMA</span>, experts in integral intralogistics services and solutions, <span class="f--color-b">you have the perfect tools to achieve it.</span></p> 
+                        <p class="f--font-e">We’re constantly put to the test by the market where we have to meet shorter and shorter deadlines faster and more effectively. Our choice is to not get left behind, keep up the pace, not lose control and always keep moving forward.</p> <br>
+                        <p class="f--font-e"><span class="f--color-b">With ULMA</span>, experts in integral intralogistics services and solutions, you have the perfect tools to achieve it.</p> 
                     </div>
                 </div>
             </div>
@@ -73,17 +73,18 @@
                 <div class="row">
                     <div class="col-lg-6 col-12"> 
                         <div class="b--card-b">
-                            <p>BECAUSE THE WORLD NEVER STOPS AND NEITHER DO YOU, AT ULMA WE’VE DESIGNED AN EXCLUSIVE SERVICE THAT HAS THE GOAL <strong>OF EXTENDING THE USEFUL LIFE OF YOUR INSTALLATION THROUGH A PERSONALISED RENEWAL PLAN</strong> THAT GUARANTEES THE WHOLE OR PARTIAL REPLACEMENT OF YOUR STACKER CRANE. </p> 
+                            <p>BECAUSE THE WORLD NEVER STOPS AND NEITHER DO YOU, AT ULMA WE’VE DESIGNED AN EXCLUSIVE SERVICE
+                                THAT HAS THE GOAL <strong>OF EXTENDING THE SERVICE LIFE OF YOUR AUTOMATED SITE THROUGH A PERSONALISED RENEWAL PLAN</strong> THAT GUARANTEES THE WHOLE OR PARTIAL REPLACEMENT OF YOUR STACKER CRANE.</p> 
                         </div>
                     </div>
                     <div class="col-lg-5 offset-lg-1  col-12 offset-0">
                         <h2 class="f--font-c f--color-b">WITH ULMA’S RENEWAL PLAN, <strong>YOU WIN</strong></h2> 
                         <ul class="b--list-a">
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Avoid risks</strong> from obsolete technology </p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p>Avoid risks from obsolete technology </p></li> 
                             <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Update your knowledge</strong> about advanced intralogistics</p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Prevent undesired warehouse stoppages</strong> and their consequences for your internal organisation</p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p>Get direct <strong>access</strong> to a <strong>contingency plan</strong></p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Shorten</strong> installation <strong>times</strong></p></li>  
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p>Prevent undesired warehouse stoppages and their consequences for your internal organisation</p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p>Get direct access to a <strong>contingency plan</strong></p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p>Shorten installation times</p></li>  
                         </ul>
                     </div>
                 </div>
@@ -109,7 +110,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 offset-lg-1 col-12 offset-0">
-                        <h2 class="f--font-b f--color-b f--mb-32 text-center"><strong>IT’S A RENEWAL PLAN WITH ADVANTAGES</strong><br>THAT ONLY A LEADER CAN GIVE YOU</h2> 
+                        <h2 class="f--font-b f--color-b f--mb-32 text-center"><strong>IT’S A RENEWAL PLAN WITH ADVANTAGES</strong><br>THAT ONLY A LEADER CAN GIVE YOU.</h2> 
                     </div>
                     <div class="col-lg-6 offset-lg-3 col-12 offset-0">
                         <img src="./img/placeholder/daifuku.png" alt="">
@@ -141,7 +142,7 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-2.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">COMPLIANCE WITH REGULATIONS</h4>
+                                        <h4 class="b--card-a__hd__title">REGULATORY COMPLIANCE</h4>
                                     </div>
                                     <div class="b--card-a__bd">
                                         <p class="b--card-a__bd__text">All the devices meet current European standards for safety and energy efficiency.</p>
@@ -171,7 +172,7 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-4.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">GUARANTEED ROBUSTNESS AND QUALITY</h4>
+                                        <h4 class="b--card-a__hd__title">DURABILITY AND QUALITY GUARANTEED</h4>
                                     </div>
                                     <div class="b--card-a__bd">
                                         <p class="b--card-a__bd__text">Peace of mind and safety for you and your facilities, only an industry leader like DAIFUKU can give it to you.</p>
@@ -201,7 +202,7 @@
                 <div class="row">
                     <div class="col-12">
                         <a class="b--cta-a" href="https://www.ulmahandling.com/en/services" target="_blank">
-                            <h3 class="b--cta-a__text"><strong>Intralogistics engineering</strong> solutions <br> for every sector</h3>  
+                            <h3 class="b--cta-a__text">Intralogistics engineering solutions <br> for <strong></strong>every sector</strong></h3>  
                             <img class="b--cta-a__media" src="./img/arrow.png" alt="">
                         </a>
                     </div>
