--- a/en.html
+++ b/en.html
@@ -202,7 +202,7 @@
                 <div class="row">
                     <div class="col-12">
                         <a class="b--cta-a" href="https://www.ulmahandling.com/en/services" target="_blank">
-                            <h3 class="b--cta-a__text">Intralogistics engineering solutions <br> for <strong></strong>every sector</strong></h3>  
+                            <h3 class="b--cta-a__text">Intralogistics engineering solutions <br> for <strong>every sector</strong></h3>  
                             <img class="b--cta-a__media" src="./img/arrow.png" alt="">
                         </a>
                     </div>
