--- a/es.html
+++ b/es.html
@@ -32,7 +32,7 @@
                 <div class="col-lg-4 col-12">
                     <div class="b--header-a__content">
                         <div class="b--header-a__content__lang">
-                            <p class="b--header-a__content__lang__text"><a href="#">ES</a> · <a href="./en.html">EN</a> · <a href="./fr.html">FR</a> · <a href="#">BR</a></p>
+                            <p class="b--header-a__content__lang__text"><a href="#">ES</a> · <a href="./en.html">EN</a> · <a href="./fr.html">FR</a></p>
                         </div>
                         <div class="b--header-a__content__social">
                             <a class="b--header-a__content__social__link" href="https://www.linkedin.com/company/ulma-handling-systems" target="_blank"><img class="b--header-a__content__social__link__icon" src="./img/social/linkedin.png" alt="LinkedIn"></a> 
