--- a/es.html
+++ b/es.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ulma Handling Plan Renove</title>
-    <meta name="description" content="Arizmendi ikastola, hezkuntza kooperatiba euskalduna">
-    <meta name="keywords" content="arizmendi, ikastola, hezkuntza, kooperatiba, euskalduna, Arrasate, Aretxabaleta, Eskoriatza">
+    <meta name="description" content="Ulma Handling Renewal plan">
+    <meta name="keywords" content="ulma, renewal, renove, transelevador, control, transstockeur, stackercrane, travelling rail">
     <link rel="icon" type="image/x-icon" href="./img/fabicon-ulma.png">
-    <link rel="alternate" hreflang="eu" href="http://www.arizmendi.eus/guikastola">
-    <link rel="alternate" hreflang="es-es" href="http://www.arizmendi.eus/guikastola/es.html">
+    <link rel="alternate" hreflang="es-es" href="http://www.ulmahandling.com/renewal/es.html">
+    <link rel="alternate" hreflang="fr" href="http://www.ulmahandling.com/renewal/fr.html">
+    <link rel="alternate" hreflang="en" href="http://www.ulmahandling.com/renewal/en.html">
     <link rel="stylesheet" href="./sass/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
